# The-Embedonomicon-rust

./: .gitignore
app/: Cargo.toml
app/src/: main.rs
foo/: Cargo.toml
foo/src/: lib.rs
log/: Cargo.toml  build.rs  log.x
log/src/: lib.rs
rt/: Cargo.toml  build.rs  link.x
rt/.cargo/: config
rt/src/: lib.rs
