[package]
name = "app"
version = "0.1.0"
authors = ["bell_liang <liang.foreverbell@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.7"
cortex-m-semihosting = "0.3.1"
rt = { path = "../rt" }
log = { path = "../log" }